examples/ex3/test_cases/failing/check21_lt_consists_of_non_int.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    public boolean func() {
        boolean a;
        boolean b;

        a = false;
        b = true;

        return a < b;
    }
}